# auth0-toy

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
be/: .env-example  config.py  main.py
be/common/auth/: verfy_token.py
fe/: .prettierrc.json  package-lock.json  package.json
fe/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
fe/src/components/: AdminProfile.tsx  LogoutButton.tsx  Profile.tsx  ProfileCard.tsx
fe/src/infra/: backendRepo.ts
ops/be/: dockerfile
ops/fe/: dockerfile
