[project]
name = "playing-with-auth0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "pytest>=8.4.0",
]
